--- a/laradius.github.io/src/css/fonts.scss
+++ b/laradius.github.io/src/css/fonts.scss
@@ -2,3 +2,28 @@
   font-family: calluna;
   src: url(./fonts/calluna-regular.otf);
 }
+
+@font-face {
+  font-family: american-captain;
+  src: url(./fonts/american-captain.otf);
+}
+
+@font-face {
+  font-family: bright;
+  src: url(./fonts/bright.otf);
+}
+
+@font-face {
+  font-family: verve;
+  src: url(./fonts/verve.ttf);
+}
+
+@font-face {
+  font-family: verve-shadow;
+  src: url(./fonts/verve-shadow.ttf);
+}
+
+@font-face {
+  font-family: wrestlemania;
+  src: url(./fonts/wrestlemania.ttf);
+}
