--- a/laradius.github.io/src/css/quasar.variables.scss
+++ b/laradius.github.io/src/css/quasar.variables.scss
@@ -30,7 +30,9 @@ $layout-border: none;
 
 //Custom Variables
 
-$background-color: #efe3ca;
+$background-color: #d3bd9e;
 
 $default-margin: 1rem;
 $default-padding: 1rem;
+
+$hr-color: #45433d;
